k8s/media-services/jellyfin-media/jellyseerr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media-services
  labels:
    app: jellyseerr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: jellyseerr
